--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@xyflow/react": "^12.3.0",
+    "clsx": "^2.1.1",
     "next": "14.2.13",
+    "pullstate": "^1.25.0",
     "react": "^18",
     "react-dom": "^18"
   },
