--- a/package.json
+++ b/package.json
@@ -9,8 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@codemirror/commands": "^6.6.2",
+    "@codemirror/lang-java": "^6.0.1",
+    "@codemirror/language": "^6.10.3",
+    "@codemirror/state": "^6.4.1",
+    "@codemirror/view": "^6.33.0",
     "@xyflow/react": "^12.3.0",
     "clsx": "^2.1.1",
+    "codemirror": "^6.0.1",
     "next": "14.2.13",
     "pullstate": "^1.25.0",
     "react": "^18",
