--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@xyflow/react": "^12.3.0",
     "clsx": "^2.1.1",
     "codemirror": "^6.0.1",
+    "lucide-react": "^0.446.0",
     "next": "14.2.13",
     "pullstate": "^1.25.0",
     "react": "^18",
