--- a/package.json
+++ b/package.json
@@ -14,10 +14,11 @@
     "@codemirror/language": "^6.10.3",
     "@codemirror/state": "^6.4.1",
     "@codemirror/view": "^6.33.0",
+    "@fortawesome/free-solid-svg-icons": "^6.6.0",
+    "@tailwindcss/typography": "^0.5.15",
     "@xyflow/react": "^12.3.0",
     "clsx": "^2.1.1",
     "codemirror": "^6.0.1",
-    "lucide-react": "^0.446.0",
     "next": "14.2.13",
     "pullstate": "^1.25.0",
     "react": "^18",
