--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "next": "14.2.13",
     "pullstate": "^1.25.0",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-markdown": "^9.0.1"
   },
   "devDependencies": {
     "@types/node": "^20",
