--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "pullstate": "^1.25.0",
     "react": "^18",
     "react-dom": "^18",
-    "react-markdown": "^9.0.1"
+    "react-markdown": "^9.0.1",
+    "react-reflex": "^4.2.6"
   },
   "devDependencies": {
     "@types/node": "^20",
